--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <h1>Welcome To </h1>
             <h1> <span class="name-highlight">Sohan</span> Website</h1>
             <h3>World-class Professional Web Developer</h3>
-            <p>My name is Taufiqul Islam Sohan. <br> I am a web developer,First aid trainer as well as a Student. <br> I can build Professional Website. So fell free to contact with me. I can make Professional Website. <br> Making Website is like playing with computers. </p>
+            <p>My name is Taufiqul Islam Sohan. <br> I am a web developer,First aid trainer as well as a Student. <br> I can build Professional Website. So fell free to contact with me. I can make Professional Website.
+                <br><span class="name-highlight"> Thank You.</span>
            
         </div>
             <di class="half-width">
